--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@ layout: landing-page
 
 				<header class="special container">
 					<span class="icon fa-bar-chart-o"></span>
-					<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
-					<br />
-					I decided to give it a really creative name.</h2>
-					<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-					<br />
-					it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-					and, like all my stuff,
-					<br />
-					released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+					<h2></h2>
+					<p></p>
 				</header>
 
 				<!-- One -->
-					<section class="wrapper style2 container special-alt">
+					<section class="wrapper style2 container special-alt" id="about">
 						<div class="row half">
 							<div class="8u">
 
@@ -49,7 +42,7 @@ layout: landing-page
 					</section>
 
 				<!-- Two -->
-					<section class="wrapper style1 container special">
+					<section class="wrapper style1 container special" id="services">
 						<div class="row">
 							<div class="4u">
 
@@ -152,19 +145,3 @@ layout: landing-page
 					</section>
 
 			</article>
-
-		<!-- CTA -->
-			<section id="cta">
-
-				<header>
-					<h2>Ready to do <strong>something</strong>?</h2>
-					<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
-				</header>
-				<footer>
-					<ul class="buttons">
-						<li><a href="#" class="button special">Take My Money</a></li>
-						<li><a href="#" class="button">LOL Wut</a></li>
-					</ul>
-				</footer>
-
-			</section>
