adding service descriptions;fix news updates

--- a/index.html
+++ b/index.html
@@ -4,37 +4,24 @@ layout: landing-page
 		<!-- Main -->
 			<article id="main">
 
-				<header class="special container">
-					<span class="icon fa-bar-chart-o"></span>
-					<h2></h2>
-					<p></p>
-				</header>
-
 				<!-- One -->
 					<section class="wrapper style2 container special-alt" id="about">
 						<div class="row half">
-							<div class="8u">
+							<div class="10u">
 
 								<header>
-									<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+									<h2>Who we are</h2>
 								</header>
-								<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
-								<footer>
-									<ul class="buttons">
-										<li><a href="#" class="button">Find Out More</a></li>
-									</ul>
-								</footer>
-
+								<p>Institute for Aging Research(IFAR) is one of the largest gerontological research facilities in a clinical setting in the U.S. Our decades-long relationship with Harvard Medical School has attracted expert teaching staff and top-notch research fellows. </p>
+								<p>The main goal of the Biostats Core at IFAR is to enhance the scientific productivity of IFAR by providing biostatistical and data management support to its faculty and funded investigators, and by insuring the validity of experimental design of IFAR affiliated projects</p>
+								<p>For more information about the research programs, collaboration or training opportunities, please contact our Core Director, <a href="mailto:TGT@hsl.harvard.edu">Tom Travison</a>.</p>
 							</div>
-							<div class="4u skel-cell-important">
+							<div class="2u skel-cell-important">
 
 								<ul class="featured-icons">
-									<li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
-									<li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
+									<li><span class="icon fa-flask"><span class="label">Feature 1</span></span></li>
 									<li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
-									<li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
-									<li><span class="icon fa-lock"><span class="label">Feature 5</span></span></li>
-									<li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
+									<li><span class="icon fa-bar-chart"><span class="label">Feature 5</span></span></li>
 								</ul>
 
 							</div>
@@ -43,44 +30,43 @@ layout: landing-page
 
 				<!-- Two -->
 					<section class="wrapper style1 container special" id="services">
+						<header>
+							<h2>Our Services</h2>
+						</header>
 						<div class="row">
 							<div class="4u">
-
 								<section>
-									<span class="icon featured fa-check"></span>
+									<span class="icon featured fa-edit"></span>
 									<header>
-										<h3>This is Something</h3>
+										<h3>Study Design/Planning</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+									<p>Our statisticians and researchers are willing to get involved into the study at the early stage. By doing so, we can help you get rid of tons of common mistakes from the beginning and save everyone a lot of time once study started.</p>
 								</section>
-
 							</div>
+
 							<div class="4u">
-
 								<section>
-									<span class="icon featured fa-check"></span>
+									<span class="icon featured fa-calculator"></span>
 									<header>
-										<h3>Also Something</h3>
+										<h3>Statistical Support</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+									<p>While our expertness in statistics ensures the quality of our reports, we also have developped a sets of reproducible tools, which allow us quickly adapt ourselves with any changes in the study and reproduce the statistical report you need.</p>
 								</section>
-
 							</div>
+
 							<div class="4u">
-
 								<section>
-									<span class="icon featured fa-check"></span>
+									<span class="icon featured fa-bar-chart"></span>
 									<header>
-										<h3>Probably Something</h3>
+										<h3>Data Management</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+									<p>We have being using some cutting-edge technologies and developed a set of data management tools based on R Shiny and REDCap, which can visualize study progress in real time. Please check the Products tab in the navigation bar or contact our <a href="mailto:TGT@hsl.harvard.edu">core director</a> for details.</p>
 								</section>
-
 							</div>
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Three
 					<section class="wrapper style3 container special" id="staff">
 
 						<header class="major">
@@ -143,5 +129,6 @@ layout: landing-page
 						</footer>
 
 					</section>
+					-->
 
 			</article>
