Update to website text (tgt).

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ layout: landing-page
 								<header>
 									<h2>Who we are</h2>
 								</header>
-								<p>Institute for Aging Research(IFAR) is one of the largest gerontological research facilities in a clinical setting in the U.S. Our decades-long relationship with Harvard Medical School has attracted expert teaching staff and top-notch research fellows. </p>
-								<p>The main goal of the Biostats Core at IFAR is to enhance the scientific productivity of IFAR by providing biostatistical and data management support to its faculty and funded investigators, and by insuring the validity of experimental design of IFAR affiliated projects</p>
-								<p>For more information about the research programs, collaboration or training opportunities, please contact our Core Director, <a href="mailto:TGT@hsl.harvard.edu">Tom Travison</a>.</p>
+								<p>The Institute for Aging Research (IFAR) at Hebrew SeniorLife is one of the largest gerontological research facilities in a clinical setting in the United States. Our decades-long relationship with Harvard Medical School has attracted expert teaching staff and top-notch research fellows. </p>
+								<p>The main goal of the Biostatistics Core at IFAR is to enhance the scientific productivity of IFAR by providing biostatistical and data management support to its faculty and investigators, and by insuring the validity of the experimental design of IFAR affiliated projects</p>
+								<p>For more information about the research programs, collaboration or training opportunities, please contact our Core Director, <a href="mailto:TGT@hsl.harvard.edu">Thomas Travison, PhD</a>.</p>
 							</div>
 							<div class="2u skel-cell-important">
 
@@ -40,7 +40,7 @@ layout: landing-page
 									<header>
 										<h3>Study Design/Planning</h3>
 									</header>
-									<p>Our statisticians and researchers are willing to get involved into the study at the early stage. By doing so, we can help you get rid of tons of common mistakes from the beginning and save everyone a lot of time once study started.</p>
+									<p>Our statisticians and skilled staff are available for consultation and collaboration at the time of study design and planning.</p>
 								</section>
 							</div>
 
@@ -50,7 +50,7 @@ layout: landing-page
 									<header>
 										<h3>Statistical Support</h3>
 									</header>
-									<p>While our expertness in statistics ensures the quality of our reports, we also have developped a sets of reproducible tools, which allow us quickly adapt ourselves with any changes in the study and reproduce the statistical report you need.</p>
+									<p>We specialize in the development of robust analysis and reporting tools facilitating reproducible research, customizable to specific projects and programs. Our personnel have extensive experience with secure data capture, management, analysis and presentation. </p>
 								</section>
 							</div>
 
@@ -60,7 +60,7 @@ layout: landing-page
 									<header>
 										<h3>Data Management</h3>
 									</header>
-									<p>We have being using some cutting-edge technologies and developed a set of data management tools based on R Shiny and REDCap, which can visualize study progress in real time. Please check the Products tab in the navigation bar or contact our <a href="mailto:TGT@hsl.harvard.edu">core director</a> for details.</p>
+									<p>We utilize REDCap and other database technologies to facilitate electronic data capture and intelligent data management. A limited demonstration is provided here <a href="">link</a>; please conduct our <a href="mailto:TGT@hsl.harvard.edu">core director</a> for details.</p>
 								</section>
 							</div>
 						</div>
