--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: landing-page
 									<h2>Who we are</h2>
 								</header>
 								<p>The Institute for Aging Research (IFAR) at Hebrew SeniorLife is one of the largest gerontological research facilities in a clinical setting in the United States. Our decades-long relationship with Harvard Medical School has attracted expert teaching staff and top-notch research fellows. </p>
-								<p>The main goal of the Biostatistics Core at IFAR is to enhance the scientific productivity of IFAR by providing biostatistical and data management support to its faculty and investigators, and by insuring the validity of the experimental design of IFAR affiliated projects</p>
-								<p>For more information about the research programs, collaboration or training opportunities, please contact our Core Director, <a href="mailto:TGT@hsl.harvard.edu">Thomas Travison, PhD</a>.</p>
+								<p>The main goal of the Biostatistics Core at IFAR is to provide biostatistical and data management collaboration and support to allied faculty and investigators.</p>
+								<p>For more information about our research programs, collaboration, services provided, or training opportunities, please contact our Core Director, <a href="mailto:TGT@hsl.harvard.edu">Thomas Travison, PhD</a>.</p>
 							</div>
 							<div class="2u skel-cell-important">
 
