Added link to study coordinator.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ layout: landing-page
 									<header>
 										<h3>Data Management</h3>
 									</header>
-									<p>We utilize REDCap and other database technologies to facilitate electronic data capture and intelligent data management. A limited demonstration is provided here <a href="">link</a>; please conduct our <a href="mailto:TGT@hsl.harvard.edu">core director</a> for details.</p>
+									<p>We utilize REDCap and other database technologies to facilitate electronic data capture and intelligent data management. A limited demonstration is provided here <a href="">link</a>; please contact our study coordinator  <a href="mailto:ileanisaza@hsl.harvard.edu"> or <a href="mailto:TGT@hsl.harvard.edu">director</a> for details.</p>
 								</section>
 							</div>
 						</div>
