Add stuff section

--- a/index.html
+++ b/index.html
@@ -66,69 +66,112 @@ layout: landing-page
 						</div>
 					</section>
 
-				<!-- Three
-					<section class="wrapper style3 container special" id="staff">
+				<!-- Three -->
+					<section class="wrapper style3 container special" id="team">
 
 						<header class="major">
-							<h2>Next look at this <strong>cool stuff</strong></h2>
+							<h2>Meet Our Team</h2>
 						</header>
 
 						<div class="row">
-							<div class="6u">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<div class="4u">
+									<img src="images/people/Tom.jpg" class="img-circle" width="144" height="144"/>
 									<header>
-										<h3>A Really Fast Train</h3>
+										<h3><a href="http://www.instituteforagingresearch.org/scientists/team-profiles-and-bios/thomas-travison-phd">Thomas Travison, PhD</a></h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+									<p>Director of Biostatistics</p>
+									<p>Assistant Professor of Medicine, Harvard Medical School</p>
 							</div>
-							<div class="6u">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<div class="4u">
+									<img src="images/people/Susan.jpg" class="img-circle" width="144" height="144"/>
 									<header>
-										<h3>An Airport Terminal</h3>
+										<h3><a href="http://www.instituteforagingresearch.org/scientists/team-profiles-and-bios/susan-l-mitchell-md-mph">Susan Mitchell, MD, MPH</a></h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+									<p>Senior Scientist and Director of Palliative Care Research</p>
+									<p>Professor of Medicine, Harvard Medical School</p>
+							</div>
+							<div class="4u">
+									<img src="images/people/Alyssa.jpg" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3><a href="http://www.instituteforagingresearch.org/scientists/team-profiles-and-bios/alyssa-b-dufour-phd">Alyssa Dufour, Ph.D.</a></h3>
+									</header>
+									<p>Assistant Scientist</p>
+									<p>Instructor of Medicine, Harvard Medical School</p>
 							</div>
 						</div>
+
 						<div class="row">
-							<div class="6u">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<div class="4u">
+									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
 									<header>
-										<h3>Hyperspace Travel</h3>
+										<h3>Margaret Bryan</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+									<p>Programmer Analyst II</p>
 							</div>
-							<div class="6u">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+							<div class="4u">
+									<img src="images/people/Ray.jpg" class="img-circle" width="144" height="144"/>
 									<header>
-										<h3>And Another Train</h3>
+										<h3>Ray Yun Gou</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+									<p>Programmer Analyst II</p>
+							</div>
+							<div class="4u">
+									<img src="images/people/Daniel.jpg" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3><a href="http://www.instituteforagingresearch.org/scientists/team-profiles-and-bios/daniel-habtemariam">Daniel Habtemariam</a></h3>
+									</header>
+									<p>Programmer Analyst I</p>
 							</div>
 						</div>
 
-						<footer class="major">
-							<ul class="buttons">
-								<li><a href="#" class="button">See More</a></li>
-							</ul>
-						</footer>
+						<div class="row">
+							<div class="4u">
+									<img src="images/people/ilean.jpg" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3><a href="http://www.instituteforagingresearch.org/scientists/team-profiles-and-bios/ilean-isaza-phd">Ilean Isaza, PhD</a></h3>
+									</header>
+									<p>Study Coordinator</p>
+							</div>
+							<div class="4u">
+									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3>Kala Jakobsen</h3>
+									</header>
+									<p>IRB and Administrative Coordinator</p>
+							</div>
+							<div class="4u">
+									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3><a href="">Timothy Tsai</a></h3>
+									</header>
+									<p>Programmer Analyst I</p>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="4u">
+									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3>Laiji Yang</h3>
+									</header>
+									<p>Programmer Analyst II</p>
+							</div>
+							<div class="4u">
+									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3><a href="http://www.instituteforagingresearch.org/scientists/team-profiles-and-bios/xiaochun-zhang-ms">Xiaochun Zhang</a></h3>
+									</header>
+									<p>Programmer Analyst II</p>
+							</div>
+							<div class="4u">
+									<img src="images/people/Hao.jpg" class="img-circle" width="144" height="144"/>
+									<header>
+										<h3><a href="https://haozhu233.github.io">Hao Zhu</a></h3>
+									</header>
+									<p>Programmer Analyst I</p>
+							</div>
+						</div>
 
 					</section>
-					-->
 
 			</article>
