Add Tim's photo

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ layout: landing-page
 									<p>IRB and Administrative Coordinator</p>
 							</div>
 							<div class="4u">
-									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
+									<img src="images/people/Tim.jpg" class="img-circle" width="144" height="144"/>
 									<header>
 										<h3><a href="">Timothy Tsai</a></h3>
 									</header>
