remove hyper link from tim

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ layout: landing-page
 							<div class="4u">
 									<img src="images/people/Tim.jpg" class="img-circle" width="144" height="144"/>
 									<header>
-										<h3><a href="">Timothy Tsai</a></h3>
+										<h3>Timothy Tsai</h3>
 									</header>
 									<p>Programmer Analyst I</p>
 							</div>
