add laiji's photo

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ layout: landing-page
 									<p>Programmer Analyst I</p>
 							</div>
 							<div class="4u">
-									<img src="images/people/na.png" class="img-circle" width="144" height="144"/>
+									<img src="images/people/Laiji.jpg" class="img-circle" width="144" height="144"/>
 									<header>
 										<h3>Laiji Yang</h3>
 									</header>
