change intruction page ui

--- a/instructions.html
+++ b/instructions.html
@@ -12,6 +12,7 @@ layout: default
           {% for instr in site.instructions %}
             <li class="wrapper style1">
               <h2><a href="{{ instr.url }}">{{ instr.title  | replace:'<br>','' }}</a></h2>
+                <sup>written by: <em>{{ instr.author }}</em></sup>
                 <p>{{ instr.meta }}</p>
             </li>
             <hr class="style-section">
