minor language change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: landing-page
 									<header>
 										<h3>Study Design/Planning</h3>
 									</header>
-									<p>Our statisticians and skilled staff are available for consultation and collaboration at the time of study design and planning.</p>
+									<p>Our statisticians and skilled staff are available to consult and collaborate for study design and planning.</p>
 								</section>
 							</div>
 
